Add responsive feature on main & status pages

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         </div> 
                      </div>
                </div>
-               <div class="contact current">
+               <div class="contact selected">
                 <img src="./img/Ahmadreza.jpeg" alt="">
                 <div class="contents">
                     <div class="acc">
